eck/kibana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-virtualservice
spec:
  gateways:
    - kibana-gateway
  hosts:
    - 'kibana.hayden.com'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kibana-eck-kibana-kb-http.elastic-system.svc.cluster.local
            port:
              number: 5601
